--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,7 +1,8 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+        logos_comercios:
+            uri_prefix: '%app.path.logos_comercios%'
+            upload_destination: '%kernel.project_dir%/public%app.path.logos_comercios%'
+            namer: Vich\UploaderBundle\Naming\OrignameNamer
