--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.27.0",
+        "copy-webpack-plugin": "^5.0.3",
         "core-js": "^3.0.0",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.1.0",
