--- a/config/packages/easyadmin/basic.yaml
+++ b/config/packages/easyadmin/basic.yaml
@@ -16,6 +16,7 @@ easy_admin:
       - { label: 'Ver web', route: 'web', icon: "eye" }
       - { label: 'Rubros', entity: Rubro }
       - { label: 'Comercios', entity: Comercio }
+      - { label: 'Tips para comercios', entity: TipEmpresa }
       - { label: 'Usuarios', entity: Usuario, icon: "user" }
 #    assets:
 #      favicon: 'bundles/app/img/favicon.png'
