--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "ckeditor": "^4.11.4",
         "jquery": "^3.4.1",
         "popper.js": "^1.15.0",
         "startbootstrap-one-page-wonder": "^5.0.5"
