Se agregan nuevas secciones. Se agregan nuevos textos. Se agregan novedades. Se corrige estilos. Se agrega filtro para resumen de novedades. Se corrige barra de herramientas del editor de texto.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 !/public/uploads/logos_comercios/.gitkeep
 /public/uploads/imagenes_galerias/*
 !/public/uploads/imagenes_galerias/.gitkeep
+/public/uploads/novedad_imagenes_destacadas/*
+!/public/uploads/novedad_imagenes_destacadas/.gitkeep
+/public/uploads/imagenes_entradas/*
+!/public/uploads/imagenes_entradas/.gitkeep
 
 # -- Editores -----------------------------------------
 # vim
