--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,4 +34,5 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/administrador, role: ROLE_ADMIN }
+        - { path: ^/administrador/admin, role: ROLE_ADMIN }
+        - { path: ^/administrador, role: ROLE_USER }
