--- a/config/routes/easy_admin.yaml
+++ b/config/routes/easy_admin.yaml
@@ -1,4 +1,4 @@
 easy_admin_bundle:
     resource: 'App\Controller\AdminController'
-    prefix: /administrador
+    prefix: /administrador/admin
     type: annotation
