--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "admin-lte": "^3.0.0-beta.1",
         "bootstrap": "^4.3.1",
         "ckeditor": "^4.11.4",
         "jquery": "^3.4.1",
