--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ckeditor": "^4.11.4",
         "jquery": "^3.4.1",
         "popper.js": "^1.15.0",
+        "select2-bootstrap-theme": "0.1.0-beta.10",
         "startbootstrap-one-page-wonder": "^5.0.5"
     }
 }
